<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello rooster-android-app!</string>
    <string name="app_name">Rooster</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="time">Time</string>
    <string name="time1">7:30\n\n9:10</string>
    <string name="time2">9:30\n\n11:10</string>
    <string name="time3">11:30\n\n13:10</string>
    <string name="time4">13:30\n\n15:10</string>
    <string name="time5">15:30\n\n17:10</string>
    <string name="time6">17:30\n\n19:10</string>
    <string name="time7">19:30\n\n21:10</string>
    <string name="subject">Subject</string>
    <string name="test_subject">Test\n\nSubject</string>
    <string name="subject_details">Subject details</string>
    <string name="name">Name</string>
    <string name="classroom">Classroom</string>
    <string name="teacher">Teacher</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="color_blue">blue</string>
    <string name="color_red">red</string>
    <string name="red">red</string>
</resources>
